changed background image in css

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@ body { background-color : #F5FFFA;
 		color : #708090; }
 
 		#hero {
-  background-image: url("https://download.unsplash.com/photo-1428591501234-1ffcb0d6871f");
+  background-image: url(/images/tools.jpg);
   width: 70%;
   /* margin-left: 15%; */
   margin: 20px auto;
