trying file path for change bg image

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@ body { background-color : #F5FFFA;
 		color : #708090; }
 
 		#hero {
-  background-image: url(/images/tools.jpg);
+  background-image: url(SarahKing.github.io/images/tools.jpg);
   width: 70%;
   /* margin-left: 15%; */
   margin: 20px auto;
