--- a/css_folder/style.css
+++ b/css_folder/style.css
@@ -1,27 +1,33 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic,400italic,700italic);
+
 body { background-color : #F5FFFA;
 		color : #FFFFFF; 
 		text-align: center;
-		font-family: Helvetica, sans-serif;}
+		font-family: Lato, Helvetica, sans-serif;
+		}
 
 		h3{
-			font-weight: lighter;
+			font-weight: 400;
 			font-size: 10px;
 			line-height: 24px;
-			letter-spacing: .1em;
+			letter-spacing: .12em;
+			word-spacing: 20px;
+			opacity: 25%;
 
 		}
 
 		h1{
-			font-weight: lighter;
+			font-weight: 300;
 			font-size: 60px;
 			line-height: 24px;
 			letter-spacing: .1em;
 		}
 
 		h2{
-			font-weight: lighter;
+			font-weight: 300;
 			font-size: 18px;
 			line-height: 4px;
+			letter-spacing: .1em;
 		}
 
 		hr{
@@ -31,20 +37,47 @@ body { background-color : #F5FFFA;
 		#slogan{	
 			text-align: left;
 			font-weight: lighter;
-			font-size: 12px;
+			font-size: 15px;
 			font-style: italic;
-			line-height: 17px;
+			line-height: 20px;
 			letter-spacing: .1em;
-			margin-left: 15%;
-			margin-right: 15%;
+			margin-left: 25%;
+			margin-right: 25%;
 
 		}
 
 		h4{
+			text-align: center;
 			background-color : #000000;
-			font-weight: lighter;
+			font-weight: 400;
 			font-size: 10px;
 			line-height: 24px;
+			letter-spacing: .1em;
+			word-spacing: 40px;
+		}
+
+
+		ul {
+			display: inline-block;
+  			margin: 0 auto;
+  			padding-left: 0;
+  			background-color: #BFBBB4;
+  			color: #000000;
+  			font-weight: 500;
+			font-size: 24px;
+  			width: 100%;
+  			margin-left: auto;
+  			margin-right: auto;
+}
+
+
+h5{
+			text-align: left;
+			padding-left: 75px;
+			background-color : #000000;
+			font-weight: 400;
+			font-size: 10px;
+			line-height: 18px;
 			letter-spacing: .1em;
 		}
 
